kustomize/base/net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"my-web-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: my-app
    tier: frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"my-api-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: my-app
    tier: backend
  ports:
    - name: api
      port: 3000
      protocol: TCP
      targetPort: 3000
  externalTrafficPolicy: Local
