kustomize/base/net/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: glb-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: k8s-ingress
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
    ingress.gcp.kubernetes.io/pre-shared-cert: prod-web-tls
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
